# guile-pnm

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.org  THANKS  configure.ac  guix.scm
.github/workflows/: guile2.2.yml  guile3.0.yml  guix.yml
build-aux/am/: Makefile.am
doc/: Makefile.am  guile-pnm-installation.texi  guile-pnm.texi  indices.texi
modules/: Makefile.am  pnm.scm
modules/pnm/: Makefile.am  graphics.scm  image.scm
modules/pnm/core/: Makefile.am  common.scm  error.scm
modules/pnm/fsm/: .gitignore  Makefile.am  common.scm  p1-context.scm  p1.puml  p2-context.scm  p2.puml  p3-context.scm  p3.puml  p4-context.scm  p4.puml  p5-context.scm  p5.puml  p6-context.scm  p6.puml  pbm-context.scm  pbm.puml  pgm-context.scm  pgm.puml  pnm-context.scm  pnm.puml  ppm-context.scm
tests/: Makefile.am  common.scm  graphics.scm  pnm-image.scm  pnm.scm
tests/image/: p2.pgm  p4.pbm  p5-gnu.pgm  p5.pgm  p6.ppm
